@@ -5,6 +5,7 @@
  * introduce BridgeTunnelElevationCalculator as the new default
  * implement basic lane rendering
  * support for tags from "Simple 3D Buildings" proposal
+ * ppm output format
  
 --------------------------------------------------------------------------------
  OSM2World 0.1.9                                                     2012-01-11 
